Mejoras
añadido a vistamain saldo cuentas compartidas, y otras mejoras